Added favicon, and missing github-source

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: "Bestiary"
 author: "chisaipete"
 description: "A searchable D&D 5e creature list."
-url: "http://chisaipete.github.io"
+url: "https://chisaipete.github.io"
+source-url: "https://github.com/chisaipete/bestiary"
 baseurl: "/bestiary"
 exclude: ['Rakefile', 'README.md']
 collections:
